quic/s2n-quic-transport/src/dc/manager/snapshots/quic__s2n-quic-transport__src__dc__manager__tests__events__on_packet_ack_client.snap
---
source: quic/s2n-quic-transport/src/dc/manager/tests.rs
expression: ""
---
DcStateChanged { state: VersionNegotiated { version: 1 } }
DcStateChanged { state: PathSecretsReady }
