quic/s2n-quic-transport/src/dc/manager/snapshots/quic__s2n-quic-transport__src__dc__manager__tests__events__on_path_secrets_ready.snap
---
source: quic/s2n-quic-transport/src/dc/manager/tests.rs
expression: ""
---
DcStateChanged { state: VersionNegotiated { version: 1 } }
DcStateChanged { state: PathSecretsReady }
DcStateChanged { state: VersionNegotiated { version: 1 } }
DcStateChanged { state: PathSecretsReady }
